--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -6,6 +6,7 @@
 
 %----------------------------
 \section{Aufbau der Software}
+\label{software_architecture}
 % Erweiterbarkeit?
 
 Die Implementierung wurde mit der Programmiersprache Java durchgeführt. In Abbildung \ref{classDiagram} ist der Programmaufbau stark vereinfacht dargestellt. Das Diagramm ist an UML-Klassendiagramme angelehnt. Pfeile stehen jedoch nicht für Teilbeziehungen oder Vererbung, sondern für den Datenfluss.\\
