--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -327,7 +327,7 @@ Ein geeignetes Werkzeug hierfür ist die \emph{Principal Component Analysis} (si
  Aus den Ergebnissen der PCA lassen sich sehr gut zufällige Skelette erzeugen. Es ist aber schwer gezielt Eigenschaften festzulegen.
  
  \paragraph{Bedingungen an explizit erhobene Merkmale}
- Der erste Schritt dies zu erreichen ist Eigenschaften, die so schon in den erhobenen Daten vorkommen, auf spezifische Werte festzulegen. Das können beispielsweise die Anzahl der Beine sein oder ob das Skelett Flügel haben soll.
+ Der erste Schritt dies zu erreichen ist, Eigenschaften, die so schon in den erhobenen Daten vorkommen, auf spezifische Werte festzulegen. Das können beispielsweise die Anzahl der Beine sein oder ob das Skelett Flügel haben soll.
  
  Dazu kann man, statt die ursprünglichen Daten und deren Verteilung zu verwenden, die entsprechenden bedingten Verteilungen bilden. Dazu muss der bedingte Mittelwert und die bedingte Kovarianzmatrix, wie in \cite[S.\ $116$ f.]{conditionalDistribution} beschrieben, bestimmt werden.
  
