First finished version of implementation details

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -81,6 +81,18 @@
  url = {https://dl.acm.org/doi/10.1145/325334.325244}
 }
 
+@online{backfaceCulling,
+ title = {Backface Culling},
+ url = {https://wiki.delphigl.com/index.php/Backfaceculling},
+ urldate = {2020-05-28}
+}
+
+@online{inkscape,
+ title = {Inkscape},
+ url = {https://inkscape.org/de},
+ urldate = {2020-05-28}
+}
+
 %%%%%%%%%%%%%%%%
 % File Formats %
 %%%%%%%%%%%%%%%%
