Small fixes in transformation matrix section

--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -42,11 +42,11 @@ Sollten in Zukunft zusätzliche Daten exportiert werden können, müsste neu eva
 \section{Transformationsmatrizen}
 \label{implementation_detail_matrices}
 
-Jedes Kindelement $k$ im Skelett speichert eine Transformationsmatrix $T_k$, die seine lokalen Koordinaten in das Koordinatensystem des Elternelements $e$ umrechnet (siehe Abbildung \ref{transformation_matrices_normal}a).
+Jedes Kindelement $k$ im Skelett speichert eine Transformationsmatrix $T_k$, die seine lokalen Koordinaten in das Koordinatensystem des Elternelements $e$ umrechnet (siehe Abschnitt \ref{skeleton_parts} und Abbildung \ref{transformation_matrices_normal}a).
 Es treten verschiedene Situationen auf, in denen unterschiedliche Transformationsmatrizen berechnet werden müssen.
 
 In Schritt $4$ des Algorithmus werden \zb alle Elemente, die nicht auf der Wirbelsäule liegen, gespiegelt (siehe Abschnitt \ref{section:overview}). Wird hier einfach eine Spiegelung an der $xy$-Ebene angewendet, so ist das resultierende Koordinatensystem nicht mehr rechtshändig, sondern linkshändig.
-Das führt beispielsweise dazu, dass im neuen Koordinatensystem nicht mehr gegen den Uhrzeigersinn, sondern mit dem Uhrzeigersinn gedreht wird. Das könnte zu Problemen führen, wenn auf den gespiegelten Elementen Transformationen ausgeführt werden müssten, \va wenn linkshändige und rechtshändige Koordinatensysteme verwendet werden. Außerdem kann es dazu führen, dass die Flächen der 3D-Modelle so interpretiert werden, als würde ihre Vorderseite nach innen zeigen, anstatt nach außen. Wird beim Rendering Backface Culling \cite{backfaceCulling} eingesetzt, führt das dazu, dass diese Flächen nicht sichtbar sind.
+Das führt beispielsweise dazu, dass im neuen Koordinatensystem nicht mehr gegen den Uhrzeigersinn, sondern mit dem Uhrzeigersinn gedreht wird. Das kann zu Problemen führen, wenn auf den gespiegelten Elementen Transformationen ausgeführt werden müssen, \va wenn linkshändige und rechtshändige Koordinatensysteme verwendet werden. Außerdem kann es dazu führen, dass die Flächen der 3D-Modelle so interpretiert werden, als würde ihre Vorderseite nach innen zeigen, anstatt nach außen. Wird beim Rendering Backface Culling \cite{backfaceCulling} eingesetzt, führt das dazu, dass diese Flächen nicht sichtbar sind.
 
 Um den Überblick über die Berechnung der Transformationsmatrizen in den verschiedenen Situationen zu behalten, wurden vier Übersichtsgrafiken erstellt (Abbildungen \mbox{\ref{transformation_matrices_normal} a und b}, Abbildung \ref{transformation_matrix_non_mirrored_parent} und Abbildung \ref{transformation_matrix_mirrored_parent}). 
 Im Folgenden wird jeweils erklärt welche Situationen sie beschreiben, wann diese auftreten und wie die entsprechenden Transformationsmatrizen berechnet werden.
